--- a/package.json
+++ b/package.json
@@ -1,35 +1,31 @@
 {
   "name": "arweave-deploy",
-  "version": "1.8.0",
+  "version": "1.6.0-b",
   "description": "arweave-deploy",
   "main": "dist/arweave",
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/cli-progress": "^1.8.1",
     "@types/mime": "^2.0.0",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^10.14.13",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^10.14.4",
     "@types/promptly": "^1.1.28",
     "arweave": "github:arweaveteam/arweave-js#4a6b820fa74f0a8f98e7cbe70fcc95f372a95820",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
-    "cli-progress": "^3.3.1",
-    "commander": "^2.20.0",
-    "glob": "^7.1.4",
-    "inline-source": "^6.2.0",
+    "inline-source": "^7.1.0",
+    "commander": "^2.19.0",
     "ipfs-unixfs": "^0.1.16",
     "ipld-dag-pb": "^0.17.4",
-    "mime": "^2.4.4",
+    "mime": "^2.4.0",
     "mocha": "^5.2.0",
-    "nexe": "^3.3.2",
-    "prettier": "^1.18.2",
+    "nexe": "^3.2.0",
     "promptly": "^3.0.3",
-    "ts-loader": "^5.4.5",
+    "ts-loader": "^5.3.3",
     "ts-node": "^7.0.1",
-    "typescript": "^3.5.3",
-    "webpack": "^4.36.1",
+    "typescript": "^3.3.4000",
+    "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.6",
+    "webpack-cli": "^3.3.0",
     "webpack-merge": "^4.2.1"
   },
   "scripts": {
@@ -58,12 +54,5 @@
     "url": "https://github.com/ArweaveTeam/arweave-deploy/issues"
   },
   "homepage": "https://www.arweave.org/hosting.html",
-  "dependencies": {},
-  "prettier": {
-    "trailingComma": "all",
-    "tabWidth": 4,
-    "singleQuote": true,
-    "parser": "typescript",
-    "printWidth": 120
-  }
+  "dependencies": {}
 }
